--- a/_materials/docker/exercices/index.html
+++ b/_materials/docker/exercices/index.html
@@ -339,4 +339,10 @@
 
         <p>In progress...</p>
     </work>
+
+    <work>
+        <h2>Extagram SpringBoot</h2>
+
+        <p>In progress...</p>
+    </work>
 </section>
