--- a/_materials/docker/exercices/index.html
+++ b/_materials/docker/exercices/index.html
@@ -269,7 +269,7 @@
     </work>
 
     <work>
-        <h2>Postgres Things</h2>
+        <h2>5. Postgres Things</h2>
 
         <p>Aquesta aplicació Java de consola utilitza una base de dades Postgres per a emmagatzemar ...<em>coses</em></p>
         <p>Està conformada per dos serveis:</p>
@@ -317,7 +317,7 @@
     </work>
 
     <work>
-        <h2>Extagram PHP</h2>
+        <h2>6. Extagram PHP</h2>
 
         <p>In progress...</p>
 
@@ -329,19 +329,25 @@
     </work>
 
     <work>
-        <h2>Svelte countries</h2>
+        <h2>7. Svelte countries</h2>
 
         <p>In progress...</p>
     </work>
 
     <work>
-        <h2>Python REST API</h2>
+        <h2>8. Python REST API</h2>
 
         <p>In progress...</p>
     </work>
 
     <work>
-        <h2>Extagram SpringBoot</h2>
+        <h2>9. Extagram SpringBoot</h2>
+
+        <p>In progress...</p>
+    </work>
+
+    <work>
+        <h2>10. Custom service</h2>
 
         <p>In progress...</p>
     </work>
