--- a/_materials/docker/exercices/index.html
+++ b/_materials/docker/exercices/index.html
@@ -266,6 +266,10 @@
         <sc java>
             System.getenv("PASSWORD")
         </sc>
+
+        <p>Per a passar el password a l'aplicació com a variable d'entorn des de l'arxiu
+            docker-compose, utilitza la directiva <a href="https://docs.docker.com/compose/compose-file/compose-file-v3/#environment">environment</a>
+        </p>
     </work>
 
     <work>
