--- a/_materials/docker/exercices/index.html
+++ b/_materials/docker/exercices/index.html
@@ -300,7 +300,7 @@
                     <li>Estableix el directori on s'ha muntat el codi com a directori de treball.
                         <p><a href="https://docs.docker.com/compose/compose-file/compose-file-v3/#domainname-hostname-ipc-mac_address-privileged-read_only-shm_size-stdin_open-tty-user-working_dir"><icb>&#xf395;</icb> working_dir</a></p>
                     </li>
-                    <li>La comanda a executar pel contenidor és <w>gradle run -q --console:plain</w>.
+                    <li>La comanda a executar pel contenidor és <w>gradle run -q --console=plain</w>.
                         <p><a href="https://docs.docker.com/compose/compose-file/compose-file-v3/#command"><icb>&#xf395;</icb> command</a></p>
                     </li>
                     <li>Configura el contenidor en mode <em>interactiu</em>.
