--- a/_materials/docker/exercices/index.html
+++ b/_materials/docker/exercices/index.html
@@ -340,7 +340,7 @@
     </work>
 
     <work>
-        <h2>6. LAMP foro</h2>
+        <h2>6. LEMP foro</h2>
 
         <p><a href="https://www.digitalocean.com/community/tutorials/how-to-install-linux-apache-mysql-php-lamp-stack-on-ubuntu-20-04-es">LAMP</a> 
             és el clàssic <em>stack</em> per a aplicacions web: Linux + Apache + MySQL + PHP, 
