--- a/_materials/docker/exercices/index.html
+++ b/_materials/docker/exercices/index.html
@@ -393,7 +393,10 @@
                         de la base de dades quan s'inicie el contenidor per primera vegada.
                         <p><a href="https://docs.docker.com/compose/compose-file/compose-file-v3/#volumes"><icb>&#xf395;</icb> volumes</a></p>
                     </li>
-                    <li>Estableix un <em>named-volume</em> al directori <w>/var/lib/mysql</w>. Així, quan les dades de la base de dades es guardaran al host, i no al contenidor.</li>
+                    <li>Estableix un <em>named-volume</em> al directori <w>/var/lib/mysql</w>. Així, quan les dades de la base de dades es guardaran al host, 
+                        i no al contenidor.
+                        <p><a href="https://docs.docker.com/compose/compose-file/compose-file-v3/#volumes"><icb>&#xf395;</icb> volumes</a></p>
+                    </li>
                 </ul>
             </li>
         </ul>
