--- a/_materials/springboot/index.html
+++ b/_materials/springboot/index.html
@@ -10,7 +10,7 @@
   <abstract>
     <p>Spring Boot web services using JPA</p>
 
-    <a href="https://github.com/gerardfp/demo">https://github.com/gerardfp/demo</a>
+    <a href="https://github.com/gerardfp/SpringBootMovieAPI">https://github.com/gerardfp/SpringBootMovieAPI</a>
   </abstract>
 </header>
 
