--- a/asix/index.html
+++ b/asix/index.html
@@ -63,7 +63,7 @@ div.item {
     <div class="items">
     <a href="/asix/m8">
             <div class="item">
-                <span>M8 - Serveis de xarxa i internet</span>
+                <span>Serveis de xarxa i internet</span>
             </div>
         </a>
     </div>
