--- a/asix/m8/uf2/index.html
+++ b/asix/m8/uf2/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF2 - Servidor web</h1>
+    <h1>Servidor web</h1>
     <div class="items">
     <a href="/asix/m8/uf2/docker">
             <div class="item">
