--- a/dam/entorns/index.html
+++ b/dam/entorns/index.html
@@ -68,6 +68,10 @@ div.item {
             <div class="item">
                 <span>Docker</span>
             </div>
+        </a><a href="/dam/entorns/gradle">
+            <div class="item">
+                <span>Gradle</span>
+            </div>
         </a>
     </div>
 </div>
