--- a/dam/index.html
+++ b/dam/index.html
@@ -63,7 +63,7 @@ div.item {
     <div class="items">
     <a href="/dam/m3">
             <div class="item">
-                <span>M3 - Programació</span>
+                <span>Programació</span>
             </div>
         </a><a href="/dam/entorns">
             <div class="item">
@@ -71,11 +71,11 @@ div.item {
             </div>
         </a><a href="/dam/m6">
             <div class="item">
-                <span>M6 - Acces a dades</span>
+                <span>Acces a dades</span>
             </div>
         </a><a href="/dam/m8">
             <div class="item">
-                <span>M8 - Programació de dispositius mòbils</span>
+                <span>Programació de dispositius mòbils</span>
             </div>
         </a>
     </div>
