--- a/dam/m3/uf1/index.html
+++ b/dam/m3/uf1/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF1 - Programacio estructurada</h1>
+    <h1>Programacio estructurada</h1>
     <div class="items">
     <a href="/dam/m3/uf1/projectes">
             <div class="item">
