--- a/dam/m3/uf2/index.html
+++ b/dam/m3/uf2/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF2 - Disseny modular</h1>
+    <h1>Disseny modular</h1>
     <div class="items">
     <a href="/dam/m3/uf2/github">
             <div class="item">
@@ -75,7 +75,7 @@ div.item {
             <div class="item">
                 <span>JUnit</span>
             </div>
-        </a><a href="/dam/m3/uf2/gradle">
+        </a><a href="/dam/m3/uf2/gradle2">
             <div class="item">
                 <span>Gradle</span>
             </div>
