--- a/dam/m6/index.html
+++ b/dam/m6/index.html
@@ -62,19 +62,19 @@ div.item {
         </ul>
     
 
-    <h1>M6 - Acces a dades</h1>
+    <h1>Acces a dades</h1>
     <div class="items">
-    <a href="/dam/m6/uf1">
+    <a href="/dam/m6/persistence">
             <div class="item">
-                <span>UF1 - Persistència en fitxers</span>
+                <span>Persistència en fitxers</span>
             </div>
-        </a><a href="/dam/m6/uf2">
+        </a><a href="/dam/m6/springboot">
             <div class="item">
-                <span>UF2 - Persistència en BDR-BDOR-BDOO</span>
+                <span>Sping Boot API</span>
             </div>
-        </a><a href="/dam/m6/uf3">
+        </a><a href="/dam/m6/firebase2">
             <div class="item">
-                <span>UF3 - Persistència en BD natives XML</span>
+                <span>Firebase</span>
             </div>
         </a>
     </div>
