--- a/dam/m6/uf1/index.html
+++ b/dam/m6/uf1/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF1 - Persistència en fitxers</h1>
+    <h1>Persistència en fitxers</h1>
     <div class="items">
     <a href="/dam/m6/uf1/persistence">
             <div class="item">
