--- a/dam/m6/uf2/index.html
+++ b/dam/m6/uf2/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF2 - Persistència en BDR-BDOR-BDOO</h1>
+    <h1>Persistència en BDR-BDOR-BDOO</h1>
     <div class="items">
     <a href="/dam/m6/uf2/springboot">
             <div class="item">
