--- a/dam/m6/uf3/index.html
+++ b/dam/m6/uf3/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF3 - Persistència en BD natives XML</h1>
+    <h1>Persistència en BD natives XML</h1>
     <div class="items">
     <a href="/dam/m6/uf3/firebase2">
             <div class="item">
