--- a/dam/m8/index.html
+++ b/dam/m8/index.html
@@ -62,19 +62,19 @@ div.item {
         </ul>
     
 
-    <h1>M8 - Programació de dispositius mòbils</h1>
+    <h1>Programació de dispositius mòbils</h1>
     <div class="items">
     <a href="/dam/m8/uf1">
             <div class="item">
-                <span>UF1. Desenvolupament d&#39;aplicacions per dispositius mòbils</span>
+                <span>Desenvolupament d&#39;aplicacions per dispositius mòbils</span>
             </div>
         </a><a href="/dam/m8/uf2">
             <div class="item">
-                <span>UF2 - Programació multimèdia</span>
+                <span>Programació multimèdia</span>
             </div>
         </a><a href="/dam/m8/uf3">
             <div class="item">
-                <span>UF3. Desenvolupament de jocs per dispositius mòbils</span>
+                <span>Desenvolupament de jocs per dispositius mòbils</span>
             </div>
         </a>
     </div>
