--- a/dam/m8/uf2/index.html
+++ b/dam/m8/uf2/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF2 - Programació multimèdia</h1>
+    <h1>Programació multimèdia</h1>
     <div class="items">
     <a href="/dam/m8/uf2/firebase">
             <div class="item">
