--- a/daw/index.html
+++ b/daw/index.html
@@ -63,11 +63,11 @@ div.item {
     <div class="items">
     <a href="/daw/m8">
             <div class="item">
-                <span>M8 - Desplegament d&#39;aplicacions</span>
+                <span>Desplegament d&#39;aplicacions</span>
             </div>
         </a><a href="/daw/m3">
             <div class="item">
-                <span>M3 - Programacio</span>
+                <span>Programacio</span>
             </div>
         </a><a href="/daw/entorns">
             <div class="item">
