--- a/daw/m3/index.html
+++ b/daw/m3/index.html
@@ -62,7 +62,7 @@ div.item {
         </ul>
     
 
-    <h1>M3 - Programacio</h1>
+    <h1>Programacio</h1>
     <div class="items">
     <a href="/daw/m3/javatutorial">
             <div class="item">
