--- a/daw/m8/index.html
+++ b/daw/m8/index.html
@@ -62,23 +62,23 @@ div.item {
         </ul>
     
 
-    <h1>M8 - Desplegament d&#39;aplicacions</h1>
+    <h1>Desplegament d&#39;aplicacions</h1>
     <div class="items">
     <a href="/daw/m8/uf1">
             <div class="item">
-                <span>UF1 - Servidors web i de transferència de fitxers</span>
+                <span>Servidors web i de transferència de fitxers</span>
             </div>
         </a><a href="/daw/m8/uf2">
             <div class="item">
-                <span>UF2 - Servidors d&#39;aplicacions web</span>
+                <span>Servidors d&#39;aplicacions web</span>
             </div>
         </a><a href="/daw/m8/uf3">
             <div class="item">
-                <span>UF3 - Desplegament d&#39;aplicacions web</span>
+                <span>Desplegament d&#39;aplicacions web</span>
             </div>
         </a><a href="/daw/m8/uf4">
             <div class="item">
-                <span>UF4 - Control de versions i documentació</span>
+                <span>Control de versions i documentació</span>
             </div>
         </a>
     </div>
