--- a/daw/m8/uf1/index.html
+++ b/daw/m8/uf1/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF1 - Servidors web i de transferència de fitxers</h1>
+    <h1>Servidors web i de transferència de fitxers</h1>
     <div class="items">
     <a href="/daw/m8/uf1/webtech">
             <div class="item">
