--- a/daw/m8/uf2/index.html
+++ b/daw/m8/uf2/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF2 - Servidors d&#39;aplicacions web</h1>
+    <h1>Servidors d&#39;aplicacions web</h1>
     <div class="items">
     <a href="/daw/m8/uf2/daw-m8-dockerwp">
             <div class="item">
