--- a/smx/index.html
+++ b/smx/index.html
@@ -63,7 +63,7 @@ div.item {
     <div class="items">
     <a href="/smx/m8">
             <div class="item">
-                <span>M8 - Aplicacions web</span>
+                <span>Aplicacions web</span>
             </div>
         </a>
     </div>
