--- a/smx/m8/index.html
+++ b/smx/m8/index.html
@@ -62,27 +62,27 @@ div.item {
         </ul>
     
 
-    <h1>M8 - Aplicacions web</h1>
+    <h1>Aplicacions web</h1>
     <div class="items">
     <a href="/smx/m8/uf1">
             <div class="item">
-                <span>UF1 - Ofimàtica  i  eines web</span>
+                <span>Ofimàtica  i  eines web</span>
             </div>
         </a><a href="/smx/m8/uf2">
             <div class="item">
-                <span>UF2 - Gestors d&#39;arxius web</span>
+                <span>Gestors d&#39;arxius web</span>
             </div>
         </a><a href="/smx/m8/uf3">
             <div class="item">
-                <span>UF3 - Gestors de continguts</span>
+                <span>Gestors de continguts</span>
             </div>
         </a><a href="/smx/m8/uf4">
             <div class="item">
-                <span>UF4 - Portals web d&#39;aprenentatge </span>
+                <span>Portals web d&#39;aprenentatge </span>
             </div>
         </a><a href="/smx/m8/uf5">
             <div class="item">
-                <span>UF5 - Fonaments d&#39;HTML i fulls d&#39;estils </span>
+                <span>Fonaments d&#39;HTML i fulls d&#39;estils </span>
             </div>
         </a>
     </div>
