--- a/smx/m8/uf5/index.html
+++ b/smx/m8/uf5/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF5 - Fonaments d&#39;HTML i fulls d&#39;estils </h1>
+    <h1>Fonaments d&#39;HTML i fulls d&#39;estils </h1>
     <div class="items">
     <a href="/smx/m8/uf5/inicihtml">
             <div class="item">
