--- a/asix/m8/index.html
+++ b/asix/m8/index.html
@@ -62,23 +62,23 @@ div.item {
         </ul>
     
 
-    <h1>M8 - Serveis de xarxa i internet</h1>
+    <h1>Serveis de xarxa i internet</h1>
     <div class="items">
     <a href="/asix/m8/uf1">
             <div class="item">
-                <span>UF1 - Servidor dns i dhcp</span>
+                <span>Servidor dns i dhcp</span>
             </div>
         </a><a href="/asix/m8/uf2">
             <div class="item">
-                <span>UF2 - Servidor web</span>
+                <span>Servidor web</span>
             </div>
         </a><a href="/asix/m8/uf3">
             <div class="item">
-                <span>UF3 - Servidor de correu i missatgeria</span>
+                <span>Servidor de correu i missatgeria</span>
             </div>
         </a><a href="/asix/m8/uf4">
             <div class="item">
-                <span>UF4 - Servidor de vídeo i àudio</span>
+                <span>Servidor de vídeo i àudio</span>
             </div>
         </a>
     </div>
