--- a/dam/m3/index.html
+++ b/dam/m3/index.html
@@ -62,7 +62,7 @@ div.item {
         </ul>
     
 
-    <h1>M3 - Programació</h1>
+    <h1>Programació</h1>
     <div class="items">
     <a href="/dam/m3/javatutorial">
             <div class="item">
@@ -70,15 +70,15 @@ div.item {
             </div>
         </a><a href="/dam/m3/uf1">
             <div class="item">
-                <span>UF1 - Programacio estructurada</span>
+                <span>Programacio estructurada</span>
             </div>
         </a><a href="/dam/m3/uf2">
             <div class="item">
-                <span>UF2 - Disseny modular</span>
+                <span>Disseny modular</span>
             </div>
         </a><a href="/dam/m3/uf3">
             <div class="item">
-                <span>UF3. Fonaments de gestió de fitxers</span>
+                <span>Fonaments de gestió de fitxers</span>
             </div>
         </a>
     </div>
