--- a/smx/m8/uf1/index.html
+++ b/smx/m8/uf1/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF1 - Ofimàtica  i  eines web</h1>
+    <h1>Ofimàtica  i  eines web</h1>
     <div class="items">
     <a href="/smx/m8/uf1/einesgoogle">
             <div class="item">
