--- a/smx/m8/uf3/index.html
+++ b/smx/m8/uf3/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF3 - Gestors de continguts</h1>
+    <h1>Gestors de continguts</h1>
     <div class="items">
     <a href="/smx/m8/uf3/wordpress">
             <div class="item">
