--- a/smx/m8/uf4/index.html
+++ b/smx/m8/uf4/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF4 - Portals web d&#39;aprenentatge </h1>
+    <h1>Portals web d&#39;aprenentatge </h1>
     <div class="items">
     <a href="/smx/m8/uf4/moodle">
             <div class="item">
