--- a/dam/programacio/codelabs/index.html
+++ b/dam/programacio/codelabs/index.html
@@ -135,7 +135,7 @@ div.item {
             </div>
         </a><a href="/dam/programacio/codelabs/junit">
             <div class="item">
-                <span>JUnit</span>
+                <span></span>
             </div>
         </a><a href="/dam/programacio/codelabs/gradle2">
             <div class="item">
