--- a/_materials/gradle/index.html
+++ b/_materials/gradle/index.html
@@ -337,3 +337,18 @@
         </low>
     </sc>
 </section>
+
+<section>
+    <h2>Dependencias</h2>
+
+    <p>Los proyectos de software rara vez funcionan de forma aislada. En la mayoría de los casos, un proyecto depende de la funcionalidad reutilizable 
+        en forma de librerías o se divide en componentes individuales para componer un sistema modular. La gestión de dependencias es una técnica 
+        para declarar, resolver y utilizar las dependencias requeridas por el proyecto de forma automatizada.</p>
+
+        <p>Repositories</p>
+        <p>Artifacts</p>
+        <p>Module</p>
+        <p>Package</p>
+
+        <w>Work in progress....</w>
+    </section>
