--- a/sofi/sofishow/la.html
+++ b/sofi/sofishow/la.html
@@ -3,8 +3,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="module" src="/sofi/js/script.js"></script>
 <link rel="stylesheet" href="/sofi/css/estil.css">
-
+<style>
+    html {
+        background-color: #070b15;
+    }
+</style>
+</style>
 <section>
+
+    <sc java>
+        for (int i = 0; i &lt; 3; i++){
+
+              for (int j = 0; j &lt; 3; j++){
+
+                    for (int k = 0; k &lt; 3; k++){
+
+                    }
+
+              }
+
+        }
+
+    </sc>
 
 
 <sc java>
