--- a/_materials/javatutorial/6/index.html
+++ b/_materials/javatutorial/6/index.html
@@ -1579,22 +1579,17 @@
             des del principi cada vegada que es faci una nova repetició de l'extern.
         </p>
 
-        <p>Per exemple, als següents dos bucles, l'extern es repeteix 2 vegades, per tant l'intern 
+        <p>Per exemple, als següents dos bucles niats, l'extern es repeteix 2 vegades, per tant l'intern 
             es repetirà des del principi cadascuna d'aquestes dues vegades. És a dir, el bucle intern
             es farà 3 vegades la primera repetetició de l'extern, i 3 vegades més a la segona repetició de 
             l'extern.
         </p>
-        <sc java>
-            for (int i = 0; i &lt; 2; i++) {
-                // ...
-                for (int j = 0; j &lt; 3; j++) {
-                    // ...
-                }
-                // ...
-            }
-        </sc>
 
-        <img src="img/forniat.gif">
+        <img src="img/for2.gif">
+
+        <p>Per a tres bucles niats la seqüència d'execució seria aquesta:</p>
+
+        <img src="img/for3.gif"/>
     </info>
 
     <quizz>
