--- a/_materials/javatutorial/1/index.html
+++ b/_materials/javatutorial/1/index.html
@@ -7,7 +7,7 @@
 <nav></nav>
 
 <header>
-<h1>Imprimir literals</h1>
+<h1>Literals i System.out.println</h1>
 
     <abstract>
         <p>En aquesta primera activitat programaràs el teu primer programa Java.</p>
