--- a/_materials/javatutorial/6/index.html
+++ b/_materials/javatutorial/6/index.html
@@ -6,7 +6,7 @@
 
 <nav></nav> 
 <header>
-    <h1>Sentències de repetició</h1>
+    <h1>for, while, do-while</h1>
     <abstract>
         <p>Les sentències de repetició permeten repetir l'execució 
             d'un bloc de codi més d'una vegada.
@@ -20,7 +20,7 @@
 </header>
 
 <section>
-    <h2>Sentència For</h2>
+    <h2>Sentència for</h2>
 
     <p>La sentència <w>for</w> proporciona una forma comptacta 
     d'iterar (<em>repetir</em>) un bloc de codi. Habitualment 
