--- a/_materials/javatutorial/7/index.html
+++ b/_materials/javatutorial/7/index.html
@@ -6,25 +6,24 @@
 
 <nav></nav> 
 <header>
-    <h1>Sentències de ramificació</h1>
+    <h1>break i continue</h1>
     <abstract>
         <p>Les sentències de ramificació permeten alterar el fluxe 
             d'execució estàndard d'un mètode, un bucle, o un switch.
         </p>
         <p>Aprendràs:</p>
         <check>A utilitzar la sentència <strong>break</strong></check>
-        <check>A utilitzar la sentènciea <strong>continue</strong></check>
-        <check>A utilitzar la sentència <strong>return</strong></check>
+        <check>A utilitzar la sentència <strong>continue</strong></check>
     </abstract>
 </header>
 
 <section>
     <h2>Sentència break</h2>
 
-    <p>La sentència <w>break</w> té dos usos</p>
+    <p>La sentència <w>break</w> té dos usos:</p>
     <ul>
-        <li><p>finalitza el loop actual (for, while, do-while)</p></li>
-        <li><p>finalitza el switch</p></li>
+        <li><p>finalitza el loop actual (<sc java>for</sc>, <sc java>while</sc>, <sc java>do-while</sc>)</p></li>
+        <li><p>finalitza el <sc java>switch</sc></p></li>
     </ul>
 
     <p>A la <a href="../5">secció 5</a> ja vam veure el seu ús a la sentència switch. 
