--- a/_materials/javatutorial/2/index.html
+++ b/_materials/javatutorial/2/index.html
@@ -6,7 +6,7 @@
 
 <nav></nav>
 <header>
-    <h1>Escanejar variables</h1>
+    <h1>Variables i Scanner</h1>
 
     <abstract>
         <p>En aquesta activitat aprendràs a fer programes interactius, que demanen 
