--- a/_materials/javatutorial/5/index.html
+++ b/_materials/javatutorial/5/index.html
@@ -6,7 +6,7 @@
 
 <nav></nav>
 <header>
-    <h1>Sentències condicionals</h1>
+    <h1>if i switch</h1>
 
     <abstract>
         <p>En aquesta activitat aprendràs a fer ús de les sentències condicionals, que permeten
