--- a/_materials/springboot/index.html
+++ b/_materials/springboot/index.html
@@ -979,6 +979,10 @@ INSERT INTO movie_genre VALUES
         </add>
     </sc>
 
+    <shell>
+        curl --user pepe:pass123 localhost:8080/movies/
+    </shell>
+
 
 </section>
 <section>
