--- a/_materials/springboot/index.html
+++ b/_materials/springboot/index.html
@@ -980,7 +980,7 @@ INSERT INTO movie_genre VALUES
     </sc>
 
     <shell>
-        curl --user pepe:pass123 localhost:8080/movies/
+        curl --user gerard:gerard123 localhost:8080/movies/
     </shell>
 
 
