--- a/_materials/springboot/index.html
+++ b/_materials/springboot/index.html
@@ -20,7 +20,7 @@
 
     <p>Un diagrama:</p> 
     
-    Postgres <--- JDBC? SQL --->   Spring Boot  <--- HTTP / JSON ---> consumidor de la API (movil, browser, postman) </p>
+    Postgres  JDBC? SQL    Spring Boot   HTTP / JSON  consumidor de la API (movil, browser, postman) </p>
 </section>
 -->
 <section>
